Fix gap between job items in career list
Override Bulma's block spacing on .box:not(:last-child) using a higher-specificity
selector so job rows sit flush against each other.

--- a/app/assets/stylesheets/_career.scss
+++ b/app/assets/stylesheets/_career.scss
@@ -4,6 +4,10 @@
   gap: 0;
 }
 
+.career-list > .box:not(:last-child) {
+  margin-bottom: 0;
+}
+
 .career-list .box {
   background: transparent;
   border: none;
